test/e2e/invalid/immutable_reassign.mylang
{
    define x of int32 = 10;
    x = 20;
}
